# proseprint

./: .gitignore  Dockerfile  README.md  config.yaml  main.py  notebook.ipynb  pyproject.toml  report.md  requirements.txt  utils.py
jobs/: build.job  gpu.job  jupyter.job
report/: export.bib  report.md
results/: RecurrentSiameseNet_dataset_1_both.csv  RecurrentSiameseNet_dataset_1_no_syntax_hyperparams.csv  RecurrentSiameseNet_dataset_1_semantic.csv  RecurrentSiameseNet_dataset_1_syntactic.csv  RecurrentSiameseNet_dataset_1_syntax_hyperparams.csv  RecurrentSiameseNet_dataset_2_both.csv  RecurrentSiameseNet_dataset_2_no_syntax_hyperparams.csv  RecurrentSiameseNet_dataset_2_semantic.csv  RecurrentSiameseNet_dataset_2_syntactic.csv  RecurrentSiameseNet_dataset_2_syntax_hyperparams.csv  RecurrentSiameseNet_dataset_3_both.csv  RecurrentSiameseNet_dataset_3_no_syntax_hyperparams.csv  RecurrentSiameseNet_dataset_3_semantic.csv  RecurrentSiameseNet_dataset_3_syntactic.csv  RecurrentSiameseNet_dataset_3_syntax_hyperparams.csv  SiameseNet_dataset_1_both.csv  SiameseNet_dataset_1_no_syntax_hyperparams.csv  SiameseNet_dataset_1_semantic.csv  SiameseNet_dataset_1_syntactic.csv  SiameseNet_dataset_1_syntax_hyperparams.csv  SiameseNet_dataset_2_both.csv  SiameseNet_dataset_2_no_syntax_hyperparams.csv  SiameseNet_dataset_2_semantic.csv  SiameseNet_dataset_2_syntactic.csv  SiameseNet_dataset_2_syntax_hyperparams.csv  SiameseNet_dataset_3_both.csv  SiameseNet_dataset_3_no_syntax_hyperparams.csv  SiameseNet_dataset_3_semantic.csv  SiameseNet_dataset_3_syntactic.csv  test_results.csv  (+4 more)
(+20 files in other folders)
