[tool.poetry]
name = "proseprint"
version = "0.1.0"
description = ""
authors = ["Noah Syrkis <noah@syrkis.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
torch = "^1.7.0"
sentence-transformers = "^2.2.2"
scikit-learn = "^1.2.2"
seaborn = "^0.12.2"
jupyter = "^1.0.0"
jupyterlab = "^4.0.2"
ipywidgets = "^8.0.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
