[tool.poetry]
name = "proseprint"
version = "0.1.0"
description = ""
authors = ["Noah Syrkis <noah@syrkis.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
sentence-transformers = "^2.2.2"
scikit-learn = "^1.2.2"
seaborn = "^0.12.2"
jupyter = "^1.0.0"
jupyterlab = "^4.0.2"
ipywidgets = "^8.0.6"
transformers = "^4.30.0"
datasets = "^2.12.0"

[tool.poetry.group.dev.dependencies]
torch = "^1.10.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
