[tool.poetry]
name = "proseprint"
version = "0.1.0"
description = ""
authors = ["Noah Syrkis <noah@syrkis.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
seaborn = "^0.12.2"
torch = "^1.10.1"
sentence-transformers = "^2.2.2"
scikit-learn = "^1.2.2"
jupyter = "^1.0.0"
jupyterlab = "^4.0.2"
ipywidgets = "^8.0.6"
tqdm = "^4.65.0"
jax = "^0.4.12"
optax = "^0.1.5"
dm-haiku = "^0.0.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
